updated form: spacing, date mistakes styling overview (time is still wrong) btns aren't always correct input fields placeholders are too light still

--- a/app/style/app.css
+++ b/app/style/app.css
@@ -207,3 +207,12 @@ h2 {
   display: flex;
   justify-content: center;
  }
+
+ .container__stretch{
+  min-height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+ }
+
+
